feat:add main section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <nav>this is hamskid contribution</nav>
+
+
+
+    <h2>ay added this main section</h2>
+    <main>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit optio eveniet rem sapiente amet id at aliquid laudantium vero officia, eum vel commodi, aperiam quos, quibusdam harum reiciendis quo facilis.
+
+        </main>
     
 </body>
 </html>
