--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit optio eveniet re
 
         </main>
     
+
+        <footer>
+
+
+            ay added the footer here.kosoro
+        </footer>
 </body>
 </html>
